--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../images/background.jpg);
+  background-image: url("https://images.pexels.com/photos/9358/sunny-luck-ipad-business.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500");
   background-size: cover;
 }
 
@@ -17,6 +17,10 @@ h2>img {
   height: 100px;
   width: 100px;
 }
+h2{
+  font-family: calibri;
+  padding-left: 50px;
+}
 #help {
   border-radius: 10px;
   float: right;
@@ -31,7 +35,7 @@ h2>img {
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 20px;
-  width: 400px;
+  width: 500px;
   display: block;
 }
 
@@ -53,7 +57,7 @@ h2>img {
   margin-top: 20px;
   height: 100px;
   width: 100px;
-  border: 2px solid black;
+  border: 2px solid lightpink;
   border-radius: 15%;
 }
 
@@ -66,7 +70,7 @@ h2>img {
   font-family: Inconsolata;
   font-weight: bold;
   text-align: center;
-  border: 3px solid black;
+  border: 3px solid lightcoral;
   height: 250px;
   border-radius: 10%;
   margin: 0 auto;
@@ -101,11 +105,18 @@ h2>img {
 }
 
 .copyname {
-  font-family: 'Satisfy', cursive;
+  font-family: calibri;
   font-weight: bold;
 }
 
 p > img {
   height: 30px;
   width: 30px;
+  color: snow;
+}
+p{
+  color: teal;
+  font-family: calibri;
+  font-size: 20px;
+  text-align: center;
 }
