--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -36,7 +36,7 @@ h2{
   margin-bottom: 50px;
   padding: 20px;
   width: 500px;
-  display: block;
+  display: inline-block;
 }
 
 #player-one, #player-two {
